--- a/test_related/lorem_ipsum.html
+++ b/test_related/lorem_ipsum.html
@@ -9,6 +9,7 @@
     <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
     <li>Aliquam tincidunt mauris eu risus.</li>
     <li>Vestibulum auctor dapibus neque.</li>
+    <li>Vestibulum auctor 65MHz dapibus neque.</li>
 </ul>
 </body>
 </html>
